--- a/client/src-tauri/commands/steam/command.yaml
+++ b/client/src-tauri/commands/steam/command.yaml
@@ -18,10 +18,10 @@ list:
       exe_path: ahk/Close steam.exe
     voice:
       sounds:
-        - ok1
-        - ok2
-        - ok3
-        - ok4
+        - confirm1
+        - confirm2
+        - confirm3
+        - confirm4
     phrases:
       - рабочий режим
       - вернись в рабочий режим
