--- a/client/.gitignore
+++ b/client/.gitignore
@@ -25,3 +25,27 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+.VSCodeCounter
+package-lock.json
+.favorites.json
+.idea
+
+src/.temporary_cache
+
+venv
+src/venv
+src-tauri/target
+weights/
+pretrained_models/
+rmvpe.pt
+hubert_base.pt
+__pycache__
+flagged
+redist/
+
+*.bat
+*.sh
+*.mp3
+edge_output.mp3
+tts_voice.wav
