--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@svelteuidev/composables": "^0.11.1",
     "@svelteuidev/core": "^0.11.1",
     "@svelteuidev/motion": "^0.11.1",
     "@tauri-apps/api": "^1.2.0",
+    "@vue/tsconfig": "^0.5.1",
     "concurrently": "^8.2.2",
     "howler": "^2.2.3",
     "radix-icons-svelte": "^1.2.1",
@@ -27,6 +30,11 @@
     "@tsconfig/svelte": "^3.0.0",
     "@types/node": "^18.7.10",
     "@vitejs/plugin-vue": "^4.5.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-vue": "^9.19.2",
+    "prettier": "^3.1.1",
     "sass": "^1.62.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.0",
