--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,10 +6,12 @@
   "endOfLine": "auto",
   "singleQuote": true,
   "semi": true,
+  "indent": "off",
   "useTabs": false,
   "prettier.printWidth": 120,
   "bracketSpacing": true,
   "arrowParens": "always",
+  "bracketSameLine": false,
   "overrides": [
     {
       "files": "*.vue",
